export interface AuthPayload {
  sub: string;
  email: string;
  isManager: boolean;
}
