export interface Page<T = unknown> {
  items: T[];
  total: number;
}
