export interface PageRequest {
  page: number; // 1-based index
  size: number; // items per page
}
